fix: Footer shows through header on mobile

--- a/style/base/_scaffolding.scss
+++ b/style/base/_scaffolding.scss
@@ -29,6 +29,7 @@ body {
 	height: 100%;
     min-height: 100%;
     position: relative;
+    background-color: $white;
 }
 
 section{
